Small refactoring before ES6 Arrow function implementation. https://bugs.webkit.org/show_bug.cgi?id=144954

Patch by Alexandr Skachkov <gskachkov@gmail.com> on 2015-05-13
Reviewed by Filip Pizlo.

* parser/Parser.h:
* parser/Parser.cpp:

Canonical link: https://commits.webkit.org/163021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184313 268f45cc-cd09-0410-ab3c-d52691b4dbfc